[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/additional_ui/calendar-2.png" type="Texture" id=1]
[ext_resource path="res://assets/additional_ui/circle-1.png" type="Texture" id=2]
[ext_resource path="res://scripts/UI/DateDisplayer.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="DateDisplayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="DateController" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CircleBackground" type="TextureRect" parent="DateController"]
margin_left = 293.178
margin_top = -36.1784
margin_right = 495.178
margin_bottom = 77.8216
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalendarIcon" type="TextureRect" parent="DateController"]
margin_left = 327.227
margin_top = 4.94054
margin_right = 386.227
margin_bottom = 56.9405
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateLabel" type="Label" parent="DateController"]
margin_left = 392.0
margin_top = 26.0
margin_right = 472.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 40, 9.5 )
custom_fonts/font = SubResource( 1 )
text = "0 m 0 d"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
